# monorepo

./: CLAUDE.md  PUBLISHING.md  README.md  biome.json  exdata.bpmn  kyc2.bpmn  kyc2b.bpmn  kyc3.bpmn  kyc3.fixed.bpmn  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  zeebe-architecture.md
.changeset/: beige-onions-trade.md  config.json  cyan-lemons-smash.md  empty-socks-accept.md  fiery-zebras-move.md  plain-parrots-prove.md  silent-carrots-stay.md  stale-loops-eat.md  three-places-open.md  tidy-lemons-kiss.md  wacky-worlds-doubt.md  young-deserts-talk.md  young-things-go.md
.github/workflows/: deploy-docs.yml  deploy-pages.yml  release.yml
apps/ai-server/: CHANGELOG.md  package.json
apps/ai-server-rs/: build.rs
apps/cli/: CHANGELOG.md  DOCUMENTATION.md  README.md  package.json
apps/desktop/: CHANGELOG.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/docs/: CHANGELOG.md  astro.config.mjs  package.json  tsconfig.json
apps/examples/: CHANGELOG.md  package.json
apps/landing/: CHANGELOG.md  astro.config.mjs  index.html  package.json  tsconfig.json
bpmn-samples/: rp.bpmn
doc/: features.md  logo-proposals.html  logos.md  migration-bpmnkit.md  plan-swagger-to-connector.md  progress.md
scripts/: bench-layout.mjs  check-packages.mjs  deprecate-old-packages.mjs  fix-bpmn.mjs  fix-packages.mjs  generate-readmes.mjs  migrate-to-bpmnkit.mjs  sync-license.mjs  update-connector-stats.mjs  update-connectors.mjs
(+181 files in other folders)
