[package]
name = "bpmn-sdk-desktop"
version = "0.1.0"
description = "BPMN SDK Desktop Editor"
edition = "2021"
default-run = "bpmn-sdk-desktop"

[lib]
name = "bpmn_sdk_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.dev]
incremental = true
